--- a/main.yml
+++ b/main.yml
@@ -15,7 +15,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  name: Jobs to update datas
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -23,7 +23,17 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: Platane/snk@master
+         id: snake-gif
+          with:
+          github_user_name: pinalli
+          svg_out_path: dist/github-contribution-grid-snake.svg
+     - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
